[tool.poetry]
name = "ullared-shopping"
version = "0.1.0"
description = "A Django site for shopping at the Swedish store Gekås in Ullared."
authors = ["Jonas Petersson <jonas.eric.peterson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
